sorted/tests/11-arm-with-guard.stderr
error: match arms with guards are unsupported by #[sorted]
 --> tests/11-arm-with-guard.rs:8:11
  |
8 |         0 if y == 5 => println!("first"),
  |           ^^
